# PLC_IUG

./: README.md  soutenance_iug_presentiel.pptx
plc_iug_caro_sylvain_yevann-master/plc_iug_caro_sylvain_yevann-master/projet_c_v6.0/: CMakeLists.txt  clipped_point_free.txt  display_image_frame.txt  image_frame_display_final.txt  message.txt
plc_iug_caro_sylvain_yevann-master/plc_iug_caro_sylvain_yevann-master/projet_c_v6.0/_win/: eibase64.lib
plc_iug_caro_sylvain_yevann-master/plc_iug_caro_sylvain_yevann-master/projet_c_v6.0/include/: clipper.h  ei_draw.h  ei_draw_polygon.h  ei_widget_button.h  ei_widget_frame.h  ei_widget_toplevel.h  ei_widgetclass.h  hash_table.h  picker.h  pixel.h  relief.h  widget_text.h
plc_iug_caro_sylvain_yevann-master/plc_iug_caro_sylvain_yevann-master/projet_c_v6.0/src/: clipper.c  ei_application.c  ei_draw.c  ei_draw_polygon.c  ei_event.c  ei_placer.c  ei_placer_old.c  ei_widget.c  ei_widget_button.c  ei_widget_frame.c  ei_widget_toplevel.c  hash_table.c  picker.c  picking_widget.c  relief.c  widget_text.c
plc_iug_caro_sylvain_yevann-master/plc_iug_caro_sylvain_yevann-master/projet_c_v6.0/tests/: button.c  clipper_test.c  frame.c  hello_world.c  minimal.c  minimal_draw_point.c  two048.c
